--- a/templates/home.html
+++ b/templates/home.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1 style="text-align: center;">Environmental Sentiment Analysis</h1>
+    <div style="display: flex;justify-content: center; margin-top: 20vh">
+        <!-- <h2>Enter your text here</h2> -->
+        <form method="post">
+            <label for="text">Text here</label>
+            <input type="text" name="title" placeholder="text here" value="{{ request.form['title']}}" />
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
